--- a/conf/logmx/logmx.properties
+++ b/conf/logmx/logmx.properties
@@ -1,7 +1,7 @@
-#LogMX Properties (generated preferences file)  [LogMX v2.0.0]
-#Fri May 14 22:59:33 CEST 2010
-warnForRawText=true
-rightSplitPos=388
+#LogMX Properties (generated preferences file)  [LogMX v4.1.3]
+#Fri Feb 14 14:39:41 CET 2014
+saveOptionsAtShutdown=false
+rightSplitPos=572
 findOptionCaseSensitive=false
 alertsPeriodLength=1000
 autoRefreshLimit=true
@@ -12,9 +12,11 @@ currLevel=1
 findFieldThread=false
 confirmExitIfSeveralFiles=true
 reloadJavaParsers=true
-entriesTableColumns=0/@/@/ID/@/@/true/@/@/3;1/@/@/Timestamp/@/@/true/@/@/8;2/@/@/Thread/@/@/true/@/@/8;3/@/@/Emitter/@/@/true/@/@/8;4/@/@/Level/@/@/true/@/@/8;5/@/@/Message/@/@/true/@/@/65
+entriesTableColumns=0/@/@/ID/@/@/true/@/@/3.0;1/@/@/Timestamp/@/@/true/@/@/8.0;2/@/@/Thread/@/@/true/@/@/8.0;3/@/@/Emitter/@/@/true/@/@/8.0;4/@/@/Level/@/@/true/@/@/8.0;5/@/@/Message/@/@/true/@/@/65.0
 bookmarks=
+fileInfosSettings=0,0
 level.color.DEBUG=[233,251,233]
+showAccelerators=true
 useCustomDateFormat=false
 alwaysAutoRefresh=true
 treeFontSize=11
@@ -23,15 +25,21 @@ autoExpandPacks=true
 mergedFilesFullPath=true
 level.color.INFO=[129,201,165]
 workspaces=
+reloadManagers=false
+checkFontOKForLocale=true
+filteringStates=
 entriesGradient=true
+bookmarksWinBounds=[0,0,600,443]
 smtpSettings=/\://\:/25/\:/false/\:/false/\://\://\:/<END>
-lastManagersURL=
+lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;/home/boudevil/Projects/Sim-Diasca/sources/Sim-Diasca/traces/conf/logmx/TraceSample.txt
 level.color.FATAL=[255,0,0]
+uiFont=Dialog.plain-11
 nbMaxAlertsInPeriod=1
 entriesOutline=true
 tableRowHeight=2
 findFieldText=true
 attachMemStatusPanel=true
+findOptionUseSelection=true
 alerts=
 level.color.FINEST=[233,251,233]
 tailSize=SMALL
@@ -39,14 +47,13 @@ findFieldID=false
 checkForNewVersion=false
 openFileAction=ASK
 firstFileLoad=false
-entriesCount=true
 lastVersionCheck=2009/03/31
 nbLinesToParseBeforeFail=50
-proxySettings=false,\:0/false,[],true,127.0.0.1;localhost
+proxySettings=false-false,\:0/false,[],true,127.0.0.1;localhost
 foldEmptyPacks=true
 windowState=0
 encodingSettings=DEFAULT_ENCODING//null//null
-recentFiles=
+recentFiles=/home/boudevil/Projects/Sim-Diasca/sources/Sim-Diasca/traces/conf/logmx/TraceSample.txt
 findFieldLevel=false
 level.color.SEVERE=[255,0,0]
 autoRefreshEntriesLimit=100000
@@ -58,15 +65,18 @@ userAccounts=
 findOptionRegexp=false
 level.color.STACK=[179,46,46]
 showMemStatusPanel=true
-windowBounds=[249,25,966,733]
+windowBounds=[249,27,1531,912]
+first=1965851440907
 leftSplitPos=152
 level.5=SEVERE,2,1,STACK,ERROR,FATAL,I am a test emitter of traces,<NO_LEVEL>
+optionsWinBounds=[0,0,630,450]
 level.4=3,WARNING,WARN
 level.3=4,INFO
 level.2=FINE,5
 level.color.ERROR=[255,0,0]
 level.1=FINEST,6,DEBUG
 mailDebug=false
+entryDetailsFields=5;3
 nbMaxLevelsPerGroupInSlider=2
 findOptionWrap=false
 lastSearchInEntryMsg=
@@ -76,6 +86,7 @@ statsSettings=DISTRIBUTION;ALL_ENTRIES;no_rect;true;true;true;false;false;EMITTE
 level.color.4=[129,201,165]
 level.color.3=[244,184,0]
 level.color.2=[255,0,0]
+toolbarButtons=file.Open;file.Reload;;edit.Copy;edit.Find;;filter.Filter;filter.Calendar;filter.FilteringStates;;tools.AutoRefresh;tools.DeltaT;tools.Export;;tools.Options
 level.color.1=[179,46,46]
 findFieldClass=false
 recentFilters=
@@ -83,17 +94,16 @@ cxTimeout=5
 confirmExit=false
 redirections=1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/1/\:/FATAL;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/2/\:/ERROR;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/3/\:/WARNING;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/4/\:/INFO;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/5/\:/FINE;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/6/\:/DEBUG
 closeFilesAtWorkspaceOpening=true
-managers=com.lightysoft.logmx.mgr.managers.LocalFileManager;com.lightysoft.logmx.mgr.managers.SCPFileManager;com.lightysoft.logmx.mgr.managers.SFTPFileManager;sample.manager.SampleHTTPManager
+managers=com.lightysoft.logmx.mgr.managers.LocalFileManager;com.lightysoft.logmx.mgr.managers.SCPFileManager;com.lightysoft.logmx.mgr.managers.SFTPFileManager;sample.manager.SampleHTTPManager;com.lightysoft.logmx.mgr.managers.LocalDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPFileManager;com.lightysoft.logmx.mgr.managers.FTPSFileManager
 findFieldDate=false
 defaultOpenDir=
 level.color.<NO_LEVEL>=[255,0,0]
-lastLogMXVersion=2000000
+lastLogMXVersion=4001003
 fileMonitoring=true
 sortPacks=true
-exportSettings=/@/@/;dd MMM yyyy HH\:mm\:ss.SSS;ALL_ENTRIES;5/@/@/3/@/@/4/@/@/1/@/@/2;true;false;true;true;CSV;dd MMM yyyy HH\:mm\:ss.SSS;dd MMM yyyy HH\:mm\:ss.SSS;true;true
-registeredParsers=1//0-Ceylan Trace Parser//ceylan.parser.CeylanTraceParser---en_US;0//0-Log Factor 5 format parser//com.lightysoft.logmx.mgr.parsers.LF5LogFileParser---en_US;0//0-Log4j HTML format parser//com.lightysoft.logmx.mgr.parsers.Log4jHTMLLogFileParser---en_US;0//0-Log4j XML format parser//com.lightysoft.logmx.mgr.parsers.Log4jXMLLogFileParser---en_US
+exportSettings=/@/@/;dd MMM yyyy HH\:mm\:ss.SSS;ALL_ENTRIES;5/@/@/3/@/@/4/@/@/1/@/@/2;true;false;true;true;CSV;dd MMM yyyy HH\:mm\:ss.SSS;dd MMM yyyy HH\:mm\:ss.SSS;true;true;false
+registeredParsers=1//0-Ceylan Trace Parser//ceylan.parser.CeylanTraceParser---en_US;0//0-Log Factor 5 format parser//com.lightysoft.logmx.mgr.parsers.LF5LogFileParser---en_US;0//0-Log4j HTML format parser//com.lightysoft.logmx.mgr.parsers.Log4jHTMLLogFileParser---en_US;0//0-Log4j XML format parser//com.lightysoft.logmx.mgr.parsers.Log4jXMLLogFileParser---en_US;1//0-UNIX/Linux system logs (syslog) format parser//com.lightysoft.logmx.mgr.parsers.SyslogLogFileParser---en_US;1//0-Eclipse RCP logs parser//com.lightysoft.logmx.mgr.parsers.EclipseLogsParser---en_US
 interlacedMerge=true
 level.color.I\ am\ a\ test\ emitter\ of\ traces=[255,255,255]
 level.color.WARNING=[244,184,0]
-showClasses=true
 tableFontSize=10
