--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -1,6 +1,6 @@
 TRACES_TOP = ..
 
-	
+
 # Must be the first target, otherwise BEAM files will not be built:
 all:
 
@@ -11,8 +11,10 @@ include $(TRACES_TOP)/GNUmakesettings.inc
 
 # Lists the modules that should be recompiled once TraceType (as defined in
 # traces.hrl) is modified:
+#
 # (however all other modules including macros like 'test_start' should be
-# rebuild as well)
+# rebuilt as well)
+#
 TRACES_TYPE_DEPENDENT_FILES = \
 	class_TraceEmitter.beam    \
 	class_TraceSupervisor.beam \
@@ -20,4 +22,3 @@ TRACES_TYPE_DEPENDENT_FILES = \
 
 
 $(TRACES_TYPE_DEPENDENT_FILES): traces.hrl
-
