--- a/src/class_TraceTemplate_test.erl.sample
+++ b/src/class_TraceTemplate_test.erl.sample
@@ -1,18 +1,12 @@
 -module(class_X_test).
 
 
--define(Tested_modules,[class_X]).
+-include("traces_for_tests.hrl").
 
 
-% For all facilities common to all tests:
--include("test_constructs.hrl").
-
-
-	
 % Runs the test.
 run() ->
 
 	?test_start,
 
 	?test_stop.
-
