--- a/src/class_TraceTemplate.erl.sample
+++ b/src/class_TraceTemplate.erl.sample
@@ -1,23 +1,24 @@
 % Add your standard header here.
+%
 -module(class_).
 
 
 % Determines what are the mother classes of this class (if any):
--define( wooper_superclasses, [class_TraceEmitter] ).
+-define( wooper_superclasses, [ class_TraceEmitter ] ).
 
 
-% Parameters taken by the constructor ('construct'). 
+% Parameters taken by the constructor ('construct').
 -define( wooper_construct_parameters, Name ).
 
 
 % Declaring all variations of WOOPER standard life-cycle operations:
 % (template pasted, two replacements performed to update arities)
--define( wooper_construct_export, new/X, new_link/X, 
-		synchronous_new/X, synchronous_new_link/X,
-		synchronous_timed_new/X, synchronous_timed_new_link/X,
-		remote_new/Y, remote_new_link/Y, remote_synchronous_new/Y,
-		remote_synchronous_new_link/Y, remote_synchronous_timed_new/Y,
-		remote_synchronous_timed_new_link/Y, construct/Y, delete/1 ).
+-define( wooper_construct_export, new/X, new_link/X,
+		 synchronous_new/X, synchronous_new_link/X,
+		 synchronous_timed_new/X, synchronous_timed_new_link/X,
+		 remote_new/Y, remote_new_link/Y, remote_synchronous_new/Y,
+		 remote_synchronous_new_link/Y, remote_synchronous_timed_new/Y,
+		 remote_synchronous_timed_new_link/Y, construct/Y, destruct/1 ).
 
 
 % Member method declarations.
@@ -40,35 +41,41 @@
 
 
 
+
+% Class-specific attributes of a X are:
+
+
+
+
 % Constructs a new .
 %
 % Construction parameters are:
 %
 % - Name: the name of this instance, specified as a plain string
-% - 
+% -
 %
 construct( State, ?wooper_construct_parameters ) ->
 
 	% The attribute of an instance are:
 	%
-	% - 
+	% -
 	%
 
 	% First the direct mother classes:
 	TraceState = class_TraceEmitter:construct( State, Name ),
-	
+
 	% Then the class-specific attributes:
 	setAttributes( TraceState, [
 		 {,},
-		 {trace_categorization,
-		  text_utils:string_to_binary(?TraceEmitterCategorization)} 
+		 { trace_categorization,
+			 text_utils:string_to_binary( ?TraceEmitterCategorization ) }
 							   ] ).
-	
-	
-	
-delete(State) ->
+
+
+
+destruct( State ) ->
 	State.
-	
+
 
 
 % Member method section.
@@ -78,5 +85,3 @@ delete(State) ->
 
 
 % Helper functions section.
-
-	
