--- a/doc/GNUmakefile
+++ b/doc/GNUmakefile
@@ -1,4 +1,16 @@
 TRACES_TOP = ..
 
+.PHONY: all
+
+
+OVERALL_DOCUMENT_SOURCE = Ceylan-Traces-Layer-technical-manual-english.rst
+
+
+# Default do-nothing target:
+all:
+	@echo "  Run 'make full-doc' to generate the manual of the 'Traces' layer."
+
+
+DOCUTILS_TOP = .
 
 include $(TRACES_TOP)/GNUmakesettings.inc
