--- a/conf/logmx/logmx.properties
+++ b/conf/logmx/logmx.properties
@@ -31,7 +31,7 @@ filteringStates=
 entriesGradient=true
 bookmarksWinBounds=[0,0,600,443]
 smtpSettings=/\://\:/25/\:/false/\:/false/\://\://\:/<END>
-lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;/home/boudevil/Projects/Sim-Diasca/sources/Sim-Diasca/traces/conf/logmx/TraceSample.txt
+lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager
 level.color.FATAL=[255,0,0]
 uiFont=Dialog.plain-11
 nbMaxAlertsInPeriod=1
@@ -53,7 +53,7 @@ proxySettings=false-false,\:0/false,[],true,127.0.0.1;localhost
 foldEmptyPacks=true
 windowState=0
 encodingSettings=DEFAULT_ENCODING//null//null
-recentFiles=/home/boudevil/Projects/Sim-Diasca/sources/Sim-Diasca/traces/conf/logmx/TraceSample.txt
+recentFiles=
 findFieldLevel=false
 level.color.SEVERE=[255,0,0]
 autoRefreshEntriesLimit=100000
