--- a/conf/logmx/logmx.properties
+++ b/conf/logmx/logmx.properties
@@ -1,12 +1,10 @@
 #LogMX Properties (generated preferences file)  [LogMX v5.3.1]
-#Fri Dec 09 11:41:40 CET 2016
+#Tue Oct 24 13:06:15 CEST 2017
 saveOptionsAtShutdown=false
-rightSplitPos=529
+rightSplitPos=503
 findOptionCaseSensitive=false
 alertsPeriodLength=1000
 autoRefreshLimit=true
-level.color.WARN=[244,184,0]
-level.color.FINE=[192,240,192]
 currLevel=1
 findFieldThread=true
 confirmExitIfSeveralFiles=true
@@ -15,7 +13,7 @@ entriesTableColumns=0/@/@/ID/@/@/true/@/@/3.0;1/@/@/Timestamp/@/@/true/@/@/8.0;2
 bookmarks=
 uncompressFiles=true
 fileInfosSettings=0,0
-level.color.DEBUG=[233,251,233]
+level.color.DEBUG=[218,230,218]
 showAccelerators=true
 useCustomDateFormat=false
 alwaysAutoRefresh=true
@@ -32,6 +30,7 @@ filteringStates=
 entriesGradient=true
 bookmarksWinBounds=[0,0,600,443]
 smtpSettings=/\://\:/25/\:/false/\:/false/\://\://\:/<END>
+lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;foo
 displayBookmarkNameOnTab=false
 level.color.FATAL=[255,0,0]
 uiFont=Dialog.plain-11
@@ -42,9 +41,9 @@ findFieldText=true
 attachMemStatusPanel=true
 findOptionUseSelection=false
 alerts=
-level.color.FINEST=[233,251,233]
 tailSize=SMALL
 findFieldID=true
+level.color.TRACE=[178,243,190]
 checkForNewVersion=false
 openFileAction=ASK
 firstFileLoad=false
@@ -55,44 +54,39 @@ proxySettings=false-false,\:0/false,[],true,127.0.0.1;localhost
 foldEmptyPacks=true
 windowState=0
 encodingSettings=DEFAULT_ENCODING//null//null
+recentFiles=none;none;none;none;none
 findFieldLevel=true
-level.color.SEVERE=[255,0,0]
 autoRefreshEntriesLimit=100000
 remoteFileChangeDetectionDelay=2000
 correlationSettings=500,0
+recentSearchs=
 findOptionResultDisplayMode=2
 userAccounts=
 findOptionRegexp=false
-level.color.STACK=[179,46,46]
 showMemStatusPanel=true
 windowBounds=[172,49,1627,1005]
 first=573486035265
-leftSplitPos=412
-level.5=SEVERE;2;1;STACK;ERROR;FATAL;I am a test emitter of traces;<NO_LEVEL>
-optionsWinBounds=[699,258,325,500]
-level.4=3;WARNING;WARN
-level.3=4;INFO
-level.2=FINE;5
+leftSplitPos=397
+level.5=ERROR;FATAL;<NO_LEVEL>
+optionsWinBounds=[699,258,400,500]
+level.4=WARNING
+level.3=INFO
+level.2=TRACE
 level.color.ERROR=[255,0,0]
-level.1=FINEST;6;DEBUG
+level.1=DEBUG
 mailDebug=false
 entryDetailsFields=5;3
 nbMaxLevelsPerGroupInSlider=2
 findOptionWrap=false
 lastSearchInEntryMsg=
-level.color.6=[233,251,233]
-level.color.5=[192,240,192]
 statsSettings=DISTRIBUTION;ALL_ENTRIES;[605,222,800,600];true;true;true;false;false;EMITTER;true;true;false;EMITTER
-level.color.4=[129,201,165]
 useNativeKeyboardShortcutKey=true
-level.color.3=[244,184,0]
-level.color.2=[255,0,0]
 toolbarButtons=file.Open;file.Reload;;edit.Copy;edit.Find;;filter.Filter;filter.Calendar;filter.FilteringStates;;tools.AutoRefresh;tools.DeltaT;tools.Export;;tools.Options
-level.color.1=[179,46,46]
 findFieldClass=true
+recentFilters=
 cxTimeout=5
 confirmExit=false
-redirections=1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/1/\:/FATAL;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/2/\:/ERROR;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/3/\:/WARNING;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/4/\:/INFO;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/5/\:/FINE;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/6/\:/DEBUG
+redirections=1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/1/\:/FATAL;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/2/\:/ERROR;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/3/\:/WARNING;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/4/\:/INFO;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/5/\:/TRACE;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/6/\:/DEBUG
 closeFilesAtWorkspaceOpening=true
 managers=com.lightysoft.logmx.mgr.managers.LocalFileManager;com.lightysoft.logmx.mgr.managers.SCPFileManager;com.lightysoft.logmx.mgr.managers.SFTPFileManager;sample.manager.SampleHTTPManager;com.lightysoft.logmx.mgr.managers.LocalDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPFileManager;com.lightysoft.logmx.mgr.managers.FTPSFileManager;com.lightysoft.logmx.mgr.managers.SocketManager;com.lightysoft.logmx.mgr.managers.SFTPDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPSDirectoryManager
 findFieldDate=true
@@ -108,6 +102,5 @@ autoRefreshFocusOnBottom=true
 registeredParsers=1//0-Ceylan Trace Parser//ceylan.parser.CeylanTraceParser---en_US;0//0-Log Factor 5 format parser//com.lightysoft.logmx.mgr.parsers.LF5LogFileParser---en_US;0//0-Log4j HTML format parser//com.lightysoft.logmx.mgr.parsers.Log4jHTMLLogFileParser---en_US;0//0-Log4j XML format parser//com.lightysoft.logmx.mgr.parsers.Log4jXMLLogFileParser---en_US;1//0-UNIX/Linux system logs (syslog) format parser//com.lightysoft.logmx.mgr.parsers.SyslogLogFileParser---en_US;1//0-Eclipse RCP logs parser//com.lightysoft.logmx.mgr.parsers.EclipseLogsParser---en_US;1//0-Log4j JSON parser//com.lightysoft.logmx.mgr.parsers.Log4j2JSONLogFileParser---en_US;1//0-LogMX exported files parser//com.lightysoft.logmx.mgr.parsers.LogMXExportLogFileParser---en_US
 interlacedMerge=true
 socketManagerBufSize=131072
-level.color.I\ am\ a\ test\ emitter\ of\ traces=[255,255,255]
 level.color.WARNING=[244,184,0]
 tableFontSize=10
