Many changes made for newer OTP/rebar/hex compliance.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -1,6 +1,5 @@
 TRACES_TOP = ..
 
-
 # Must be the first target, otherwise BEAM files will not be built:
 all:
 
@@ -15,10 +14,10 @@ include $(TRACES_TOP)/GNUmakesettings.inc
 # (however all other modules including macros like 'test_start' should be
 # rebuilt as well)
 #
-TRACES_TYPE_DEPENDENT_FILES = \
+TRACES_TYPE_DEPENDENT_FILES =  \
 	class_TraceEmitter.beam    \
 	class_TraceSupervisor.beam \
 	class_TraceAggregator.beam
 
 
-$(TRACES_TYPE_DEPENDENT_FILES): traces.hrl
+$(TRACES_TYPE_DEPENDENT_FILES): ../include/traces.hrl
