--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -1,60 +1,47 @@
-% This is a (manually crafted) configuration file of rebar3, so that
-% Ceylan-Traces can better integrate in the current OTP ecosystem, despite its
-% (more complex) build based on GNU make.
+% This is a configuration file of rebar3, so that Ceylan-Traces can better
+% integrate in the current OTP ecosystem, despite its (more complex, probably
+% more flexible) native build based on GNU make.
+
+% If the name of this file is 'rebar.config', then it is a generated file,
+% otherwise it is a template (in conf/rebar.config.template), meant to be filled
+% by information coming from GNUmakevars.inc.
 %
-% This is also a template, so that version numbers can be updated from a
-% centralized place (namely GNUmakevars.inc).
+% See the Myriad counterpart file (same name) for more explanations.
 
 
-% Base layout was obtained thanks to: 'rebar3 new app traces', as Traces is an
+% Base layout was obtained thanks to: 'rebar3 new app traces', as WOOPER is an
 % active OTP application (not a mere library).
 
-% To be run from the library root as 'rebar3 compile' or 'rebar3 release'.
-
-
-% See also:
-% - http://erlang.org/doc/design_principles/release_structure.html
-% - https://www.rebar3.org/docs/releases
-% - https://learnyousomeerlang.com/release-is-the-word
-
-
+% To be taken into account, from the library root, through 'make
+%  rebar3-application' or 'make rebar3-release'.
 
 
 % Settings for the 'default' profile follow.
 
 
-% Depends on the Ceylan-WOOPER OTP active application (Myriad and Erlang implied):
-
 % As a GIT-based dependency:
 %
-% (not working properly, as the hex plugin expects a flat source tree
-% apparently, so the build of the dependency fails)
-%
-%{deps, [ {wooper, "2.*.*", {git,
-%   "https://github.com/Olivier-Boudeville/Ceylan-WOOPER",
-%   {branch, "master"} } } ] }.
+{deps, [ {myriad, {git, "git://github.com/Olivier-Boudeville/Ceylan-Myriad",
+					{branch, "master"}}},
+		 {wooper, {git, "git://github.com/Olivier-Boudeville/Ceylan-WOOPER",
+					{branch, "master"} } } ] }.
 
 
 % As an hex-package dependency:
-%
-% (works if the package uses a specific hook script, see
-% hex-compile-hook-script.sh, to compensate for the GNUmake* root files that the
-% package archive will not include at their location)
-%
-{deps, [ {wooper, "WOOPER_VERSION_FOR_REBAR"} ] }.
+%{deps, [ {wooper, "WOOPER_VERSION_FOR_REBAR"} ] }.
 
 
+% Include directories found in INC:
+{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, debug_info, {debug_info_key,"DEBUG_KEY_FOR_REBAR"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, INCS_FOR_REBAR ]}.
 
-% We need to rely on our dedicated build procedure (ex: for the parse transforms
-% involved):
-%
+
+% Bootstrapped modules (from BOOTSTRAP_MODULES):
+{erl_first_files, [ FIRST_FILES_FOR_REBAR ]}.
+
+
 % Could not set REBAR_PROFILE=$(REBAR_PROFILE):
-%
-%{pre_hooks, [ {compile, "make -s rebar3-info"} ]}.
-{pre_hooks, [ {compile, "make -s rebar3-compile"} ]}.
-
-%{post_hooks, [
-%	{compile, "echo 'Traces post-compile hook!'"} ]}.
+{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
+{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
 
 
@@ -67,7 +54,7 @@
 %
 {relx, [
 
-  {release, {traces_release, {cmd, "cat GNUmakevars.inc | grep 'TRACES_VERSION := '| sed 's|^TRACES_VERSION := ||1' | tr -d '\n'"}},
+  {release, {traces_release, "VERSION_FOR_REBAR3"},
 			% myriad and wooper thus implied:
 			[sasl, traces]},
 
@@ -89,9 +76,15 @@
   {prod, [ {relx, [
 
 	% Same as default profile:
-	{release, {traces_release, {cmd, "cat GNUmakevars.inc | grep 'TRACES_VERSION := '| sed 's|^TRACES_VERSION := ||1' | tr -d '\n'"}},
-		 % myriad and wooper thus implied:
-		 [sasl, traces]},
+	{release, {traces_release, "VERSION_FOR_REBAR3",
+			  % myriad and wooper thus implied:
+			  [sasl, traces]},
+
+	% Like for the default profile, except for removed {d,myriad_debug_mode},
+	% {d,wooper_debug_mode} and {d,traces_debug_mode}, and added
+	% {d,exec_target_is_production}:
+	%
+	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"DEBUG_KEY_FOR_REBAR"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, INCS_FOR_REBAR ]}.
 
 	% For the build makefiles:
 	{env, [ { 'REBAR_PROFILE', "prod" } ] },
