--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -39,12 +39,12 @@
 
 
 % Bootstrapped modules (from BOOTSTRAP_MODULES):
-{erl_first_files, [ FIRST_FILES_FOR_REBAR ]}.
+%{erl_first_files, [ FIRST_FILES_FOR_REBAR ]}.
 
 
 % Could not set REBAR_PROFILE=$(REBAR_PROFILE):
-{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
-{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
+%{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
+%{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
 
 
