--- a/ebin/GNUmakefile
+++ b/ebin/GNUmakefile
@@ -1,5 +1,5 @@
 TRACES_TOP = ..
 
-# Just defined so that the 'priv' directory exists in GIT.
+# Mostly so that ebin is known of GIT.
 
 include $(TRACES_TOP)/GNUmakesettings.inc
