Minor doc update.

--- a/doc/GNUmakefile
+++ b/doc/GNUmakefile
@@ -64,12 +64,12 @@ clone-mirror:
 export-doc: clean-doc full-doc export-to-official export-to-mirror
 
 
-export-to-official:
+export-to-official: $(DOC_GENERATED_FILES)
 	@echo "   Exporting Traces documentation to official website ($(WEB_SRV))"
 	@/bin/scp $(SP) $(WEB_CONTENT) $(WEB_SRV):$(WEB_ROOT)/Traces/
 
 
-export-to-mirror:
+export-to-mirror: $(DOC_GENERATED_FILES)
 	@echo "   Exporting Traces documentation to mirror website in $(TRACES_WEB_MIRROR_BRANCH)"
 	@/bin/cp -f $(WEB_CONTENT) $(TRACES_WEB_MIRROR_BRANCH) && cd $(TRACES_WEB_MIRROR_BRANCH) && git add . && git merge -s ours && git commit -m "Traces doc updated." && git push && git pull --ff-only
 
