--- a/rebar.config
+++ b/rebar.config
@@ -43,8 +43,8 @@
 
 
 % Could not set REBAR_PROFILE=$(REBAR_PROFILE):
-%{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
-%{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
+{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
+{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
 
 
@@ -61,8 +61,8 @@
 			% myriad and wooper thus implied:
 			[sasl, traces]},
 
-  %{sys_config, "./config/sys.config"},
-  %{vm_args, "./config/vm.args"},
+  {sys_config, "./conf/sys.config"},
+  %{vm_args, "./conf/vm.args"},
 
   {dev_mode, true},
   {include_erts, false},
