--- a/doc/GNUmakefile
+++ b/doc/GNUmakefile
@@ -81,7 +81,11 @@ clean-doc:
 
 
 info-web:
+	@echo "HTML_TARGET = $(HTML_TARGET)"
+	@echo "SP = $(SP)"
 	@echo "WEB_CONTENT = $(WEB_CONTENT)"
+	@echo "WEB_SRV = $(WEB_SRV)"
+	@echo "WEB_ROOT = $(WEB_ROOT)"
 	@echo "TRACES_WEB_MIRROR_BRANCH = $(TRACES_WEB_MIRROR_BRANCH)"
 	@echo "GITHUB_PAGES_BASE = $(GITHUB_PAGES_BASE)"
 
