--- a/doc/GNUmakefile
+++ b/doc/GNUmakefile
@@ -32,9 +32,9 @@ GITHUB_PAGES_BASE := $(shell basename "$(TRACES_WEB_MIRROR_BRANCH)")
 
 
 
-.PHONY: doc all full-doc html pdf clone-mirror         \
-		export-doc export-to-official export-to-mirror \
-		clean clean-doc info info-web
+.PHONY: doc all full-doc html pdf clone-mirror            \
+		export-doc export-to-official export-to-mirror    \
+		clean clean-doc clean-links info info-web
 
 
 
@@ -87,9 +87,13 @@ export-to-mirror: $(DOC_GENERATED_FILES)
 clean: clean-doc
 
 
-clean-doc:
+clean-doc: clean-links
 	@echo "     Cleaning documentation"
 	-@/bin/rm -f *.aux *.log *.maf *.mtc* *.stc* *.tex *.toc $(DOC_GENERATED_FILES)
+
+
+clean-links:
+	-@/bin/rm -f index.html traces.html traces.pdf
 
 
 info: info-doc info-web
