Interfacing with Myriad's trace_bridge added.

--- a/test/GNUmakefile
+++ b/test/GNUmakefile
@@ -1,4 +1,6 @@
 TRACES_TOP = ..
 
+# To allow local tests (ex: trace_bridging_test.erl) to depend on Myriad ones:
+BEAM_DIRS += $(MYRIAD_TOP)/test/utils
 
 include $(TRACES_TOP)/GNUmakesettings.inc
