Trace severities standardised, as per RFC 5424.

--- a/conf/logmx/logmx.properties
+++ b/conf/logmx/logmx.properties
@@ -1,7 +1,7 @@
 #LogMX Properties (generated preferences file)  [LogMX v5.1.2]
-#Fri Dec 04 21:43:24 CET 2020
+#Sat Dec 05 22:15:34 CET 2020
 saveOptionsAtShutdown=false
-rightSplitPos=355
+rightSplitPos=354
 findOptionCaseSensitive=false
 alertsPeriodLength=1000
 autoRefreshLimit=true
@@ -31,7 +31,7 @@ filteringStates=
 entriesGradient=true
 bookmarksWinBounds=[0,0,600,443]
 smtpSettings=/\://\:/25/\:/false/\:/false/\://\://\:/<END>
-lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;SOME_DIR/ceylan/traces/conf/logmx/TraceSample.txt
+lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;SOME_PATH
 displayBookmarkNameOnTab=false
 uiFont=SansSerif.plain-11
 nbMaxAlertsInPeriod=1
@@ -53,7 +53,7 @@ proxySettings=false-false,\:0/false,[],true,127.0.0.1;localhost
 foldEmptyPacks=true
 windowState=0
 encodingSettings=SPECIFIC_ENCODING//UTF-8//null
-recentFiles=
+recentFiles=SOME_FILE
 findFieldLevel=false
 autoRefreshEntriesLimit=100000
 remoteFileChangeDetectionDelay=2000
