--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 % Depends on the Ceylan-Myriad and Ceylan-WOOPER OTP library applications
 % (Erlang implied):
 
-% As a GIT-based dependency:
+% As GIT-based dependencies:
 {deps, [ {myriad, {git, "git://github.com/Olivier-Boudeville/Ceylan-Myriad",
 					{branch, "master"}}},
 		 {wooper, {git, "git://github.com/Olivier-Boudeville/Ceylan-WOOPER",
@@ -31,18 +31,23 @@
 
 
 % As an hex-package dependency:
-%{deps, [ {wooper, "2.0.9"} ] }.
+%{deps, [ {wooper, "2.0.10"} ] }.
 
 
 % Include directories found in INC:
-{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../wooper/include/"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/../myriad/include/apps/generate-password"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/.."} ]}.
+{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../wooper/include/"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/../myriad/include/apps/generate-password"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/.."}, {i,"../wooper/../myriad/ebin"} ]}.
 
 
 % Bootstrapped modules (from BOOTSTRAP_MODULES):
 %{erl_first_files, [ "" ]}.
 
 
-% Could not set REBAR_PROFILE=$(REBAR_PROFILE):
+% (hooks needed, for example to create the include symlinks and for the build
+% itself)
+%
+% Previously 'MYRIAD_REBAR_PROFILE=${REBAR_PROFILE}' was added, yet
+% REBAR_PROFILE is actually not set, so we rely on our default value instead.
+%
 {pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
 {post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
@@ -57,13 +62,14 @@
 %
 {relx, [
 
-  {release, {traces_release, "1.0.4"},
+  {release, {traces_release, "1.0.5"},
 			% myriad and wooper thus implied:
 			[sasl, traces]},
 
   {sys_config, "./conf/sys.config"},
   %{vm_args, "./conf/vm.args"},
 
+  % Base, development version:
   {dev_mode, true},
   {include_erts, false},
 
@@ -82,7 +88,7 @@
 	% {d,wooper_debug_mode}, {d,traces_debug_mode} and {d,tracing_activated},
 	% and added {d,exec_target_is_production}:
 	%
-	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../wooper/include/"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/../myriad/include/apps/generate-password"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/.."} ]},
+	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../wooper/include/"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/../myriad/include/apps/generate-password"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/.."}, {i,"../wooper/../myriad/ebin"} ]},
 
 	% For the build makefiles:
 	{env, [ { 'REBAR_PROFILE', "prod" } ] },
