--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -48,9 +48,14 @@
 % Previously 'MYRIAD_REBAR_PROFILE=${REBAR_PROFILE}' was added, yet
 % REBAR_PROFILE is actually not set, so we rely on our default value instead.
 %
-{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
-{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
+% Hooks had to be even strengthened, otherwise spurious, ill-configured
+% compilations will be wrongly attempted by rebar3, when used as a dependency:
+%
+%{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
+%{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
+{pre_hooks,  [ {compile, "make rebar3-bulletproof-compile-pre-hook"} ]}.
+{post_hooks, [ {compile, "make rebar3-bulletproof-compile-post-hook"} ]}.
 
 
 % For release generation:
